# MieMCServer

./: .gitignore  CHANGELOG.md  README.md  command.py  commands.json  config.yml  cron_events.py  inputTest.py  jdk.sh  logs.txt  main.py  pyproject.toml  setup.py  start-server.sh  start.py  test.py
.github/: PULL_REQUEST_REVIEW_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: default.md  version_prerelease.md  version_release.md
cron/: backup.py  crontab.sh  dailyClean.py  jobs.tab  reboot.py  start-server.sh  start.py  trimEnd.sh  weeklyClean.py
example/: 1.17.1.json  paper-versions.json  paper.json  version_manifest.json  versionlog.txt
minecraft/: config.py  install.py  interactions.py  update.sh  version.py
minecraft/clean_scripts/: alertServer.sh  dailyCleanUp.sh  deleteItems.sh  killUnnecessaryMobs.sh  stopServer.sh  weeklyCleanUp.sh
minecraft/server/: changelog.txt
scripts/: clean-commands.txt  custom-command.sh  end-regions.txt  reboot.py
src/: command.py  main.py  requirements.txt
src/configuration/: config.py  email.py  maintenance.py  messaging.py  minecraft.py  modded.py  rcon.py  server.py  temperature.py
src/minecraft/: install.py  interactions.py  version.py
src/scripts/: reboot.py  start-server.sh
src/util/: backup.py  cron.py  data.py  download.py  (+10 more)
util/: backup.py  config.py  configuration.py  cron.py  cron_temp.py  date.py  emailer.py  extension.py  files.py  inputextended.py  logger.py  maintenance.py  monitor.py  scripting.py  syslog.py  temp.py
(+6 files in other folders)
